photos uploaded and about page

--- a/sale-photocopies.html
+++ b/sale-photocopies.html
@@ -1,75 +1,67 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
+	<head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angela Rigby Doble</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Angela Rigby Doble</title>
+		<meta name="description" content="Description here." />
+		<link rel="stylesheet" href="styles.css" />
+		<script src="Templates/template-manager.js"></script>
 
-<body>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Art</a></li>
-            <li><a href="#">Sale - photocopies</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+	<body>
+		<!-- Navigation Menu -->
+		<custom-nav></custom-nav>
 
+		<main>
+			<h1>Signed photocopies (while stocks last)</h1>
+			<p>A3 £6.00 + p&p, A4 £4.00 + p&p</p>
 
-    <main>
-        <h1>Signed photocopies (while stocks last)</h1>
-        <p>A3 £6.00 + p&p, A4 £4.00 + p&p</p>
+			<h4>Animals:</h4>
+			<ul>
+				<li>Bear scratching - 1x A3, 1x A4</li>
+				<li>Seacows - 2x A3, 2x A4</li>
+				<li>Sealions - 3x A3, 2x A4</li>
+				<li>Rescue pony - 1x A3</li>
+				<li>New-born zebra - 3x A3, 1x A4</li>
+				<li>Panting dog - 1x A3, 2x A4</li>
+				<li>Polar bear exercising - 1x A3</li>
+				<li>Bulldog - 2x A3</li>
+				<li>Leopard - 2x A3</li>
+			</ul>
 
-<h4>Animals:</h4>
-    <ul>
-        <li>Bear scratching - 1x A3, 1x A4 </li>
-        <li>Seacows - 2x A3, 2x A4</li>
-        <li>Sealions - 3x A3, 2x A4</li>
-        <li>Rescue pony - 1x A3</li>
-        <li>New-born zebra - 3x A3, 1x A4</li>
-        <li>Panting dog - 1x A3, 2x A4</li>
-        <li>Polar bear exercising - 1x A3 </li>
-        <li>Bulldog - 2x A3</li>
-        <li>Leopard - 2x A3</li>
-    </ul>
+			<h4>Places</h4>
+			<ul>
+				<li>Bonfire - 1x A3</li>
+				<li>Mum feeding the cat - 3x A4</li>
+				<li>Evening - 2x A4</li>
+				<li>Two bonfires - 1x A3, 1x A4</li>
+				<li>Huntsmoor in spring - 2x A2</li>
+				<li>The chapel in spring - 1x A3</li>
+				<li>Huntsmoor with George - 1x A4</li>
+			</ul>
 
-<h4>Places</h4>
-    <ul>
-        <li>Bonfire - 1x A3</li>
-        <li>Mum feeding the cat - 3x A4</li>
-        <li>Evening - 2x A4</li>
-        <li>Two bonfires - 1x A3, 1x A4</li>
-        <li>Huntsmoor in spring - 2x A2</li>
-        <li>The chapel in spring - 1x A3</li>
-        <li>Huntsmoor with George - 1x A4</li>
-    </ul>
+			<h4>People</h4>
+			<ul>
+				<li>Fu blowing bubbles - 4 A4</li>
+				<li>Fu reading - 2 A3, 3 A4, including 2 black \& white (£3.00)</li>
+				<li>Mei Mei under snake hat - 1 A3, 1 A4</li>
+				<li>Mei Mei under blue hat - 2 A3, 1 A4</li>
+			</ul>
 
-<h4>People</h4>
-    <ul>
-        <li>Fu blowing bubbles - 4 A4</li>
-        <li>Fu reading - 2 A3, 3 A4, including 2 black \& white (£3.00)</li>
-        <li>Mei Mei under snake hat - 1 A3, 1 A4</li>
-        <li>Mei Mei under blue hat - 2 A3, 1 A4</li>
-    </ul>
-
-<h4>Middle-East</h4>
-    <ul>
-        <li>Iraqis voting - 2 A4, 1 A3</li>
-        <li>Who am I? - 1 A3 </li>
-        <li>Caspian Sea - 1 A4</li>
-        <li>Girl with chadooris (1) - 2 A3, 1 A4</li>
-        <li>Girl with chadooris (2) - 1 A3, 1A4</li>
-        <li>Volunteers - 2 A4</li>
-        <li>The Revolution - 2 A4</li>
-    </ul>
-    </main>
-
-
-</body>
-
-
+			<h4>Middle-East</h4>
+			<ul>
+				<li>Iraqis voting - 2 A4, 1 A3</li>
+				<li>Who am I? - 1 A3</li>
+				<li>Caspian Sea - 1 A4</li>
+				<li>Girl with chadooris (1) - 2 A3, 1 A4</li>
+				<li>Girl with chadooris (2) - 1 A3, 1A4</li>
+				<li>Volunteers - 2 A4</li>
+				<li>The Revolution - 2 A4</li>
+			</ul>
+		</main>
+	</body>
 </html>
