--- a/about.html
+++ b/about.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-		
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+			rel="stylesheet"
+		/>
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Angela Rigby Doble</title>
@@ -28,21 +31,42 @@
 		<!-- Navigation Menu -->
 		<custom-nav></custom-nav>
 
+		<main>
+			<div class="about-container">
+				<div class="about-left-column">
+					<h1>About me</h1>
+					<p>
+						Art was always the thing I did best. Here is a self-portrait, aged
+						15. I decided not to go to art school because my older sister had a
+						bad time at Goldsmith\’s College (many years ago!).
+					</p>
+					<p>
+						My working life led me in other directions, but in the end I drifted
+						back to art. I lived in London at the time, and exhibited in several
+						galleries, including a couple of one-woman shows.
+					</p>
+					<p>
+						I regularly sell pictures in local galleries and exhibitions and
+						have won a number of prizes and awards.
+					</p>
+					<p>
+						Most of the pictures here are for sale as originals, others as
+						prints.
+					</p>
+					<p>
+						I am available for commissions, and will consider a range of
+						subjects - please enquire.
+					</p>
+				</div>
+			</div>
 
-        <main>
-            <div class="about-container">
-                <div class="about-left-column">
-                <H1>About me</H1>
-                <p>Art was always the thing I did best. Here is a self-portrait, aged 15. I decided not to go to art school because my older sister had a bad time at Goldsmith’s College (many years ago!).</p>
-                <p>My working life led me in other directions, but in the end I drifted back to art. I lived in London at the time, and exhibited in several galleries, including a couple of one-woman shows.</p>
-                <p>I regularly sell pictures in local galleries and exhibitions and have won a number of prizes and awards.</p>
-                <p> Most of the pictures here are for sale as originals, others as prints.</p>
-                <p>I am available for commissions, and will consider a range of subjects - please enquire.</p>
-            </div>
-
-            <div class="about-right-column">
-                <img src="Images/ard self portrait.avif" alt="Fu Lian Doble headshot" class="about-image">
-            </div>
-        </main>
+			<div class="about-right-column">
+				<img
+					src="Images/ard self portrait.avif"
+					alt="Fu Lian Doble headshot"
+					class="about-image"
+				/>
+			</div>
+		</main>
 	</body>
 </html>
