--- a/sale-photocopies.html
+++ b/sale-photocopies.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="Description here." />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
-
+    </head>
 	<body>
 		<!-- Navigation Menu -->
 		<custom-nav></custom-nav>
