Made photos load dynamically and started categor searching on images.

--- a/about.html
+++ b/about.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
-			rel="stylesheet"
-		/>
-
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+        
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Angela Rigby Doble</title>
@@ -61,11 +58,7 @@
 			</div>
 
 			<div class="about-right-column">
-				<img
-					src="Images/ard self portrait.avif"
-					alt="Fu Lian Doble headshot"
-					class="about-image"
-				/>
+				<img src="Images/ard self portrait.avif" alt="Angela Rigby Doble illustration" class="about-image"/>
 			</div>
 		</main>
 	</body>
