--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<li>
 				<it>All pictures available as signed prints - A3: £12, A4: £7.50 (plus p&p)</it>
 			</li>
-			<li><it>Commissions welcome</it></li>
+			<li><it>Commissions welcome poo</it></li>
 		</ul>
 
 		<div class="masonry">
