--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 	</body>
 
 	<main>
-		<ul>
-			<li><it>All dimensions given are for originals</it></li>
-			<li>
-				<it>All pictures available as signed prints - A3: £12, A4: £7.50 (plus p&p)</it>
-			</li>
-			<li><it>Commissions welcome poo</it></li>
-		</ul>
+		<div class="homepage-bulletpoints">
+			<ul>
+				<li><it>All dimensions given are for originals</it></li>
+				<li><it>All pictures available as signed prints - A3: £12, A4: £7.50 (plus p&p)</it></li>
+				<li><it>Commissions welcome.</it></li>
+			</ul>
+		</div> 
 
 		<div class="masonry">
 			<!-- Add / modify images in images.json -->
@@ -45,3 +45,4 @@
 		
 	</main>
 </html>
+ 
