--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 					<p>
 						Art was always the thing I did best. Here is a self-portrait, aged
 						15. I decided not to go to art school because my older sister had a
-						bad time at Goldsmith\’s College (many years ago!).
+						bad time at Goldsmith’s College (many years ago!).
 					</p>
 					<p>
 						My working life led me in other directions, but in the end I drifted
@@ -55,10 +55,9 @@
 						subjects - please enquire.
 					</p>
 				</div>
-			</div>
-
-			<div class="about-right-column">
+				<div class="about-right-column">
 				<img src="Images/ard self portrait.avif" alt="Angela Rigby Doble illustration" class="about-image"/>
+				</div>
 			</div>
 		</main>
 	</body>
