Added masonry auto-adjustments.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<!-- Add / modify images in images.json -->
 		</div>
 		<script src="picture_loader.js"></script>
+		<script src="masonry-formatter.js"></script>
 		
 	</main>
 </html>
