--- a/contact.thankyou.html
+++ b/contact.thankyou.html
@@ -5,10 +5,6 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Angela Rigby Doble</title>
@@ -33,22 +29,10 @@
 		<custom-nav></custom-nav>
 	</body>
 
-	<main>
-		<div class="homepage-bulletpoints">
-			<ul>
-				<li><i>All dimensions given are for originals</i></li>
-				<li><i>All pictures available as signed prints - A3: £12, A4: £7.50 (plus postage and packaging)</i></li>
-				<li><i>Commissions welcome.</i></li>
-			</ul>
-		</div> 
-
-		<div class="masonry">
-			<!-- Add / modify images in images.json -->
-		</div>
-		<script src="picture_loader.js"></script>
 
 
-		
-	</main>
+<div class="thankyou-text">
+    <p>Thank you for getting in contact. I will get back to you as soon as possible.</p>
+    <button><a href="index.html">Return to Homepage</a></button>
+</div>
 </html>
- 
