--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
 			</ul>
 		</div> 
 
+		<select id="categoryFilter">
+			<option value="all">All</option>
+			<option value="The Garden">The Garden</option>
+			<option value="Animals">Animals</option>
+			<option value="People">People</option>
+			<option value="Places">Places</option>
+			<option value="Other">Other</option>
+			<!-- Add more categories as needed -->
+		</select>
+		
+		<!-- Masonry container where images will be appended -->
+		<div class="masonry"></div>
+
 		<div class="masonry">
 			<!-- Add / modify images in images.json -->
 		</div>
