--- a/sale-photocopies.html
+++ b/sale-photocopies.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
 
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,17 +11,18 @@
 		<meta name="description" content="Description here." />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
-    </head>
+	</head>
 	<body>
 		<!-- Navigation Menu -->
 		<custom-nav></custom-nav>
 
 		<main>
-			<div class="Sales-content">
-				<h2>Signed photocopies (while stocks last)</h2>
-				<p>A3 £6.00 + p&p, A4 £4.00 + p&p</p>
+			<div class="sales-content">
+				<div class="sales-columm">
+					<h2>Signed photocopies (while stocks last)</h2>
+					<p>A3 £6.00 + p&p, A4 £4.00 + p&p</p>
 
-				<h4>Animals:</h4>
+					<h4>Animals:</h4>
 					<ul>
 						<li>Bear scratching - 1x A3, 1x A4</li>
 						<li>Seacows - 2x A3, 2x A4</li>
@@ -34,7 +35,7 @@
 						<li>Leopard - 2x A3</li>
 					</ul>
 
-				<h4>Places</h4>
+					<h4>Places</h4>
 					<ul>
 						<li>Bonfire - 1x A3</li>
 						<li>Mum feeding the cat - 3x A4</li>
@@ -45,15 +46,15 @@
 						<li>Huntsmoor with George - 1x A4</li>
 					</ul>
 
-				<h4>People</h4>
+					<h4>People</h4>
 					<ul>
 						<li>Fu blowing bubbles - 4x A4</li>
-						<li>Fu reading - 2x A3, 3x A4, including 2 black & white (£3.00)</li>
+						<li>Fu reading - 2x A3, 3x A4, including 2 black and white (£3.00)</li>
 						<li>Mei Mei under snake hat - 1x A3, 1x A4</li>
 						<li>Mei Mei under blue hat - 2x A3, 1x A4</li>
 					</ul>
 
-				<h4>Middle-East</h4>
+					<h4>Middle-East</h4>
 					<ul>
 						<li>Iraqis voting - 2x A4, 1x A3</li>
 						<li>Who am I? - 1x A3</li>
@@ -63,6 +64,7 @@
 						<li>Volunteers - 2x A4</li>
 						<li>The Revolution - 2x A4</li>
 					</ul>
+				</div>
 			</div>
 		</main>
 	</body>
