--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-        
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Angela Rigby Doble</title>
@@ -58,8 +62,7 @@
 					</p>
 					<p>
 						I am available for commissions, and will consider a range of
-						subjects - please enquire.
-					</p>
+						subjects - please <a href="contact.html">enquire.</a></p>
 				</div>
 				<div class="about-right-column">
 				<img src="Images/ard self portrait.avif" alt="Angela Rigby Doble illustration" class="about-image"/>
