--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</ul>
 		</div> 
 
-		<select id="categoryFilter">
+		<select id="categoryFilter" type="categories">
 			<option value="all">All</option>
 			<option value="The Garden">The Garden</option>
 			<option value="Animals">Animals</option>
