--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Angela Rigby Doble</title>
-		<meta name="description" content="Description here." />
+		<meta name="description" content="Angela Rigby Doble is an artist, writer and creative based in North Wales." />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
 	</head>
