--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="contact-container">
-    <form target="_blank" action="https://formsubmit.co/4f80c11dd30a74cfcb35bba67fc5d9df" method="POST">
+    <form target="_blank" action="https://formsubmit.co/arigbyd@gmail.com" method="POST">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
