--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="contact-container">
-    <form target="_blank" action="https://formsubmit.co/arigbyd@gmail.com" method="POST">
+    <form target="_blank" action="https://formsubmit.co/70e95a6d1a7b00f5b01f25f88c6f6c27" method="POST">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
