--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,10 @@
 
 <div class="contact-text">
     <h2>Contact</h2>
-</div>
+</div>ss
 
 <div class="contact-container">
-    <form target="_blank" action="https://formsubmit.co/28b9f794c5b7038ddff66e7b9c4459c1" method="POST">
+    <form target="_blank" action="https://formsubmit.co/arigbyd@gmail.com" method="POST">
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
