--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
 <div class="contact-text">
     <h2>Contact</h2>
-</div>ss
+</div>
 
 <div class="contact-container">
     <form target="_blank" action="https://formsubmit.co/arigbyd@gmail.com" method="POST">
