--- a/contact.thankyou.html
+++ b/contact.thankyou.html
@@ -16,18 +16,18 @@
 		<meta name="description" content="Description here." />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
-	</head>
 
-	<!-- Googlew tags, replace with relevant for Angla -->
-	<!-- Google tag (gtag.js) 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8TN0MQFJE7"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XYHCGBPXM0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8TN0MQFJE7');
-</script> -->
+  gtag('config', 'G-XYHCGBPXM0');
+</script>
+
+</head>
 
 	<body class="index-page">
 		<!-- Navigation Menu -->
