--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
 		<meta name="description" content="Angela Rigby Doble is an artist, writer and creative based in North Wales." />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
-	</head>
 
-	<!-- Googlew tags, replace with relevant for Angla -->
-	<!-- Google tag (gtag.js) 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8TN0MQFJE7"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XYHCGBPXM0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8TN0MQFJE7');
-</script> -->
+  gtag('config', 'G-XYHCGBPXM0');
+</script>
+
+</head>
 
 	<body class="index-page">
 		<!-- Navigation Menu -->
