--- a/sale-photocopies.html
+++ b/sale-photocopies.html
@@ -16,6 +16,18 @@
 		<meta name="description" content="Description here." />
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XYHCGBPXM0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XYHCGBPXM0');
+</script>
+
+
 	</head>
 	<body>
 		<!-- Navigation Menu -->
