--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,8 @@
 		<script src="Templates/template-manager.js"></script>
 
         <!-- Google tag (gtag.js) -->
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYHCGBPXM0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -28,7 +30,7 @@
 </script>
 
     </head>
-    
+
 	<body class="index-page">
 		<!-- Navigation Menu -->
 		<custom-nav></custom-nav>
