--- a/sale-photocopies.html
+++ b/sale-photocopies.html
@@ -18,6 +18,8 @@
 		<script src="Templates/template-manager.js"></script>
 
 <!-- Google tag (gtag.js) -->
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYHCGBPXM0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -26,7 +28,6 @@
 
   gtag('config', 'G-XYHCGBPXM0');
 </script>
-
 
 	</head>
 	<body>
