--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<link rel="stylesheet" href="styles.css" />
 		<script src="Templates/template-manager.js"></script>
 
+
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYHCGBPXM0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -29,7 +31,6 @@
 
   gtag('config', 'G-XYHCGBPXM0');
 </script>
-
 </head>
 
 	<body class="index-page">
