--- a/sale-photocopies.html
+++ b/sale-photocopies.html
@@ -38,7 +38,7 @@
 			<div class="sales-content">
 				<div class="sales-columm">
 					<h2>Signed photocopies (while stocks last)</h2>
-					<p>A3 £6.00 + p&p, A4 £4.00 + p&p</p>
+					<p>A3-£20 (plus postage and packaging)<br> A4-£15 (plus postage and packaging)</p>
 
 					<h4>Animals:</h4>
 					<ul>
