--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 		<div class="homepage-bulletpoints">
 			<ul>
 				<li><i>All dimensions given are for originals</i></li>
-				<li><i>All pictures available as signed prints - A3: £12, A4: £7.50 (plus postage and packaging)</i></li>
+				<li><i>All pictures available as signed prints: - A3-£20 (plus postage and packaging)
+					A4-£15 (plus postage and packaging)</i></li>
 				<li><i>Commissions welcome.</i></li>
 			</ul>
 		</div>
