--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<li><i>All pictures available as signed prints: - A3-£20 (plus postage and packaging)
 					A4-£15 (plus postage and packaging)</i></li>
 				<li><i>Commissions welcome.</i></li>
+				<li><i>Cards - £3 per card, £13.50.00 for pack of 5, £25 for pack of 10</i></li>
 			</ul>
 		</div>
 
