--- a/writing.html
+++ b/writing.html
@@ -36,9 +36,156 @@
 	<body class="index-page">
 		<!-- Navigation Menu -->
 		<custom-nav></custom-nav>
+
 	</body>
 
 	<main>
+		<div class="writing-wrapper">
+			<div class="writing-text">
+				<p>Ever since I knew how I wrote compulsively, undeterred as a child by sibling parody, or as
+		an adult by the risk of my diaries getting into the wrong hands. I have written articles,
+		reviews, short stories and devotionals, and most of all, poems.
+				</p>
+			</div>
+ 
+			<div class="the-deep-darkness">
+				<h3>The deep darkness of love</h3>
+	<p>I still have a few copies left of my collection, <i>The deep darkness of love</i>, price £5.00 +
+	postage and packing.
+	A new edition will be available on Amazon soon.
+	Also, look out for a new collection, based on the experience of neurodivergent people’s
+	partners.
+
+	<br></br> Below are some poems from The deep darkness of love which I won prizes for:</p>
+			</div>
+
+		<div class="writing-accordion">
+    		<details>
+        		<summary>And the whole house was filled</summary>
+					<p>
+						He was back,
+						and the whole house
+						was full of it, roast meat, baked bread - 
+
+						our brother too,
+						back from death, the stink
+						only now completely washed away,
+
+						lounged and laughed,
+						eating and drinking by his side,
+						glowing with life and clean sweat.
+
+						My secret,
+						costing everything I had, lay sealed
+						in an alabaster bottle, hidden in my cloak.
+
+						I snapped the neck
+						and poured the unexpected perfume
+						over his male-smelling head, his warm hands, smoothed his feet.
+
+						Breath-taking,
+						it rose through the whole house
+						like lamplight or music, sweetness we will never
+						savour again.
+						He smiled and understood,
+						wouldn’t let them criticise, gave my impulse-buy
+
+						profound meaning.
+						I knelt before him in tears, all of us
+						and the feasting house to its roof filled with him.
+
+						<i>This poem won an American award for excellence in poetry</i>
+					</p>
+			</details>
+
+			<details>
+				<summary>No man’s land</summary>
+					<p>
+					<i>‘A cat is considered by law to be property. If you find a stray and keep it, you can be
+			       convicted of theft.’
+					(Notice in Ealing)</i>
+
+					The runaway cats you see on posters
+					end up here. ‘I just need,’ they say,
+					nosing round the door of my shed,
+					‘some space,’ slinking in,
+					‘to get my head back together.’
+					‘And I’m “not required for breeding”,’
+					they add, curving around my leg.
+					There is usually one curled up
+					on the perished felt of the roof,
+					another marking time under the apple tree
+					by the old bath. And who knows
+					how many in the bramble patch.
+					‘We want Millicent back!’
+					yells 020 8443 9705,
+					stung by unaccustomed pain.
+					‘Sightings in the allotment area.
+					Reward offered.’
+
+					I unscrew the thermos
+					and sit in my doorway, dreaming
+					of my reward. A new shed? Maybe
+					a proper greenhouse? The late afternoon sun
+					puts haloes on bean-rows and chrysanthemums,
+					blackberries and weeds, half-blinding me.
+					A Persian is watching
+					from the next plot’s shadow, a ghost
+					trailing soft white streamers,
+					with small unhappy eyes.
+					‘I’m Millicent,’ she murmurs,
+					and the sun moves, gilding her suddenly,
+					and lighting up stained-glass windows
+					in a number of tumble-down sheds.
+					With a sigh I forget about wealth,
+					and risk my freedom
+					with a saucer of milk.
+			</details>
+		<details>
+        	<summary>Painting class</summary>
+        		<p>
+					The art of watercolour
+					is to let the light
+					shine through.
+
+					Lay on transparent colours,
+					wash after jewel-like wash,
+					viridian, cobalt blue,
+					rose madder -
+					underneath I can still see
+					disappointment,
+					emptiness,
+					fear of the future.
+
+					Lay on the opaque colours,
+					yellow ochre,
+					cadmium red,
+					cadmium yellow -
+					underneath I cannot see
+					the way ahead,
+					the hand, the face
+					of God.
+
+					Everything around me
+					looks like a painting -
+					the cerulean sky,
+					lemon yellow sun,
+					sea, Prussian blue.
+					But on my paper,
+					layer on muddy layer;
+					I have tried too hard.
+
+					Scrub it off, start again!
+					That is the art,
+					to let the light shine through
+					even the darkest shade,
+					ultramarine,
+					burnt umber,
+					Paynes gray.
+        		</p>
+    		</details>
+	</div>
+	</div>
 
     </main>
 
