Added writing page plus relevent styles. Some code clean up.

--- a/about.html
+++ b/about.html
@@ -70,7 +70,9 @@
 						subjects - please <a href="contact.html">enquire.</a></p>
 				</div>
 				<div class="about-right-column">
-				<img src="Images/ard self portrait.avif" alt="Angela Rigby Doble illustration" class="about-image"/>
+					<div class="about-image">
+				<img src="Images/ard self portrait.avif" alt="Angela Rigby Doble illustration" class="about-image"/></div>
+				<i>self-portrait, aged 15</i>
 				</div>
 			</div>
 		</main>
