--- a/writing.html
+++ b/writing.html
@@ -56,7 +56,7 @@
 	Also, look out for a new collection, based on the experience of neurodivergent people’s
 	partners.
 
-	<br></br> Below are some poems from The deep darkness of love which I won prizes for:</p>
+	<br> Below are some poems from The deep darkness of love which I won prizes for:</p>
 			</div>
 
 		<div class="writing-accordion">
@@ -139,7 +139,7 @@
 					in a number of tumble-down sheds.
 					With a sigh I forget about wealth,
 					and risk my freedom
-					with a saucer of milk.
+					with a saucer of milk. </p>
 			</details>
 		<details>
         	<summary>Painting class</summary>
