button and about page

--- a/index.html
+++ b/index.html
@@ -42,12 +42,21 @@
 		<div class="homepage-bulletpoints">
 			<ul>
 				<li><i>All dimensions given are for originals</i></li>
-				<li><i>All pictures available as signed prints: - A3-£20 (plus postage and packaging)
-					A4-£15 (plus postage and packaging)</i></li>
+				<li><i>All pictures available as signed prints: - A3-£25 (plus postage and packaging)
+					A4-£17.50 (plus postage and packaging)</i></li>
 				<li><i>Commissions welcome.</i></li>
-				<li><i>Cards - £3 per card, £13.50.00 for pack of 5, £25 for pack of 10</i></li>
+				<li><i>Cards - £3.50 per card, £15.00 for pack of 5, £25 for pack of 10</i></li>
+				<li><i>Signed photocopies (while stocks last)</li>
+					A3 - £6.00 plus postage and packaging
+					A4 - £4.00 plus postage</I>
 			</ul>
 		</div>
+
+		<div class="about-button">
+  <a href="https://arigbyd.wixsite.com/art-and-writing" target="_blank" class="external-button">
+    See more
+  </a>
+</div>
 
 		<div class="middle-bar">
 			<div class="social-media-icons">
