--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
 		<div class="homepage-bulletpoints">
 			<ul>
 				<li><i>All dimensions given are for originals</i></li>
-				<li><i>All pictures available as signed prints: - A3-£25 (plus postage and packaging)
+				<br><li><i>All pictures available as signed prints: 
+					<ul>A3-£25 (plus postage and packaging)</ul>
 					A4-£17.50 (plus postage and packaging)</i></li>
-				<li><i>Commissions welcome.</i></li>
-				<li><i>Cards - £3.50 per card, £15.00 for pack of 5, £25 for pack of 10</i></li>
-				<li><i>Signed photocopies (while stocks last)</li>
-					A3 - £6.00 plus postage and packaging
-					A4 - £4.00 plus postage</I>
+				<br><li><i>Commissions welcome.</i></li>
+				<br><li><i>Cards
+					<ul>£3.50 per card</ul>
+					<ul>£15.00 for pack of 5</ul>
+					<ul>£25 for pack of 10</i></li></ul>
+
+				<br><li><i>Signed photocopies (while stocks last)</li>
+					<ul>A3 - £6.00 plus postage and packaging</ul>
+					<ul>A4 - £4.00 plus postage and packaging</ul></I>
 			</ul>
 		</div>
 
