Cleaned up some styles relating to the outside link button and the writing accordion.

--- a/index.html
+++ b/index.html
@@ -46,24 +46,22 @@
 					<ul>A3-£25 (plus postage and packaging)</ul>
 					A4-£17.50 (plus postage and packaging)</i></li>
 				<br><li><i>Commissions welcome.</i></li>
-				<br><li><i>Cards
+				<br><i><li>Cards
 					<ul>£3.50 per card</ul>
 					<ul>£15.00 for pack of 5</ul>
-					<ul>£25 for pack of 10</i></li></ul>
+					<ul>£25 for pack of 10</ul></li></i>
 
-				<br><li><i>Signed photocopies (while stocks last)</li>
+				<br><i><li>Signed photocopies (while stocks last)</li>
 					<ul>A3 - £6.00 plus postage and packaging</ul>
-					<ul>A4 - £4.00 plus postage and packaging</ul></I>
+					<ul>A4 - £4.00 plus postage and packaging</ul></i>
 			</ul>
 		</div>
 
 		<div class="about-button">
-  <a href="https://arigbyd.wixsite.com/art-and-writing" target="_blank" class="external-button">
-    See more
-  </a>
 </div>
 
 		<div class="middle-bar">
+			<a href="https://arigbyd.wixsite.com/art-and-writing" target="_blank" class="external-button"> See more </a>
 			<div class="social-media-icons">
 				<a href="https://www.facebook.com/ARDartandwriting?locale=en_GB" target="_blank"><i class="fab fa-facebook-f"></i></a>
 				<a href="https://www.instagram.com/arigbyd/" target="_blank"><i class="fab fa-instagram"></i></a>
