--- a/writing.html
+++ b/writing.html
@@ -60,7 +60,7 @@
 			</div>
 
 		<div class="writing-accordion">
-    		<details>
+    		<details name="Writing">
         		<summary>And the whole house was filled</summary>
 					<p>
 						He was back,
@@ -98,7 +98,7 @@
 					</p>
 			</details>
 
-			<details>
+			<details name="Writing">
 				<summary>No man’s land</summary>
 					<p>
 					<i>‘A cat is considered by law to be property. If you find a stray and keep it, you can be
@@ -141,7 +141,7 @@
 					and risk my freedom
 					with a saucer of milk. </p>
 			</details>
-		<details>
+		<details name="Writing">
         	<summary>Painting class</summary>
         		<p>
 					The art of watercolour
