Front page Bulletpoints now split into two columns when space is available.

--- a/index.html
+++ b/index.html
@@ -39,26 +39,29 @@
 	</body>
 
 	<main>
-		<div class="homepage-bulletpoints">
-			<ul>
-				<li><i>All dimensions given are for originals</i></li>
-				<br><li><i>All pictures available as signed prints: 
-					<ul>A3-£25 (plus postage and packaging)</ul>
-					A4-£17.50 (plus postage and packaging)</i></li>
-				<br><li><i>Commissions welcome.</i></li>
-				<br><i><li>Cards
-					<ul>£3.50 per card</ul>
-					<ul>£15.00 for pack of 5</ul>
-					<ul>£25 for pack of 10</ul></li></i>
+		<div class="about-container homepage-bulletpoints">
+			<div class="bulletpoints">
+				<ul>
+					<li><i>All dimensions given are for originals</i></li>
+					<br><li><i>All pictures available as signed prints: 
+						<ul>A3-£25 (plus postage and packaging)</ul>
+						A4-£17.50 (plus postage and packaging)</i></li>
+					<br><li><i>Commissions welcome.</i></li>
+				</ul>
+			</div>
+			<div class="bulletpoints">
+				<ul>
+					<br><i><li>Cards
+						<ul>£3.50 per card</ul>
+						<ul>£15.00 for pack of 5</ul>
+						<ul>£25 for pack of 10</ul></li></i>
 
-				<br><i><li>Signed photocopies (while stocks last)</li>
-					<ul>A3 - £6.00 plus postage and packaging</ul>
-					<ul>A4 - £4.00 plus postage and packaging</ul></i>
-			</ul>
+					<br><i><li>Signed photocopies (while stocks last)</li>
+						<ul>A3 - £6.00 plus postage and packaging</ul>
+						<ul>A4 - £4.00 plus postage and packaging</ul></i>
+				</ul>
+			</div>
 		</div>
-
-		<div class="about-button">
-</div>
 
 		<div class="middle-bar">
 			<a href="https://arigbyd.wixsite.com/art-and-writing" target="_blank" class="external-button"> See more </a>
