--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 						<ul>£25 for pack of 10</ul></li></i>
 
 					<br><i><li>Signed photocopies (while stocks last)</li>
-						<ul>A3 - £6.00 plus postage and packaging</ul>
-						<ul>A4 - £4.00 plus postage and packaging</ul></i>
+						<ul>A3-£6.00 (plus postage and packaging)</ul>
+						<ul>A4-£4.00 (plus postage and packaging)</ul></i>
 				</ul>
 			</div>
 		</div>
